[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/num3.png" type="Texture" id=1]
[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Enemy3.gd" type="Script" id=4]
[ext_resource path="res://scenes/Hitbox_Fusion.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Hitbox_en1.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0
height = 34.0

[sub_resource type="CircleShape2D" id=28]
radius = 100.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 65.0
height = 114.0

[sub_resource type="Animation" id=4]
resource_name = "IdleLeft_en1"
length = 0.4
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_movement"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Num2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleRight_en1"
length = 0.4
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_movement"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Num2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Num2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RunLeft_en1"
length = 0.96
loop = true
step = 0.06
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.24 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_movement"
}, {
"args": [  ],
"method": "activate_movement"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Num2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66, 0.72, 0.78, 0.84, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RunRight_en1"
length = 0.96
loop = true
step = 0.06
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.24 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_movement"
}, {
"args": [  ],
"method": "activate_movement"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Num2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66, 0.72, 0.78, 0.84, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "IdleLeft_en1"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "IdleRight_en1"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft_en1"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleRight_en1"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleLeft_en1"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleRight_en1"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 9 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 10 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 11 )
blend_point_2/pos = Vector2( -0.1, 1.1 )
blend_point_3/node = SubResource( 12 )
blend_point_3/pos = Vector2( 0.1, 1.1 )
blend_point_4/node = SubResource( 13 )
blend_point_4/pos = Vector2( -0.1, -1.1 )
blend_point_5/node = SubResource( 14 )
blend_point_5/pos = Vector2( 0.1, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "RunLeft_en1"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "RunRight_en1"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "RunRight_en1"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "RunLeft_en1"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "RunLeft_en1"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "RunRight_en1"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( -0.1, 1.1 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( 0.1, 1.1 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( -1, 0 )
blend_point_4/node = SubResource( 20 )
blend_point_4/pos = Vector2( -0.1, -1.1 )
blend_point_5/node = SubResource( 21 )
blend_point_5/pos = Vector2( 0.1, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=25]
states/Idle_en1/node = SubResource( 15 )
states/Idle_en1/position = Vector2( 248, 144 )
states/Run_en1/node = SubResource( 22 )
states/Run_en1/position = Vector2( 470, 144 )
transitions = [ "Idle_en1", "Run_en1", SubResource( 23 ), "Run_en1", "Idle_en1", SubResource( 24 ) ]
start_node = "Idle_en1"

[sub_resource type="AnimationNodeStateMachinePlayback" id=26]

[node name="Enemy3" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 4 )

[node name="Num2" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 35
frame = 1
region_enabled = true
region_rect = Rect2( 77, 77, 8916, 272 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 19, 76 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 16, 50 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 17, 50 )
collision_layer = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 28 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 17, 50 )
collision_mask = 4
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Hitbox_Fusion" parent="." instance=ExtResource( 5 )]
position = Vector2( 19, 76 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleLeft_en1 = SubResource( 4 )
anims/IdleRight_en1 = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/RunLeft_en1 = SubResource( 7 )
anims/RunRight_en1 = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 26 )
parameters/Idle_en1/blend_position = Vector2( 0, 0 )
parameters/Run_en1/blend_position = Vector2( 0, 0 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox_Fusion" to="." method="_on_Hitbox_Fusion_area_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
